# pygeoapi.formatter.gml-npad

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  smoke.yml
src/pygeoapi_formatter_gml_npad/: base.py  mapping.py  validation.py  writer.py
src/pygeoapi_formatter_gml_npad/kommuneplan_20190401/: __init__.py  codelists.py  feature_types.py  formatter.py
src/pygeoapi_formatter_gml_npad/npad_4_5_2/: __init__.py  codelists.py  formatter.py
src/pygeoapi_formatter_gml_npad/reguleringsplan_20190401/: __init__.py  codelists.py  feature_types.py  formatter.py
tests/: test_kommuneplan_20190401.py  test_npad_4_5_2.py  test_reguleringsplan_20190401.py
tests/smoke/: conftest.py  fixtures.sql  schema.sql  test_smoke.py
