[project]
name = "pygeoapi-formatter-gml-npad"
description = "pygeoapi output formatter for SOSI-GML NPAD"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Arkitektum AS" }]
dependencies = [
    "pygeoapi",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pygeoapi_formatter_gml_npad = ["py.typed"]

[tool.ruff]
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
